nav-contrast issue fixed

--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ header {
   position: absolute;
   left: 1.5em;
   top: 1.5em;
-  color: white;
+  color: black;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 35px;
   font-weight: bolder;
@@ -32,7 +32,15 @@ header {
   position: absolute;
   right: 1.5em;
   top: 1.5em;
-  color: white;
+}
+
+
+.heading-1 {
+  color: black;
+}
+
+.heading-2 {
+  color: black;
 }
 
 #main {
@@ -188,6 +196,11 @@ footer {
 
 .nav-link {
   color: white !important;
+}
+
+.navbar-nav .nav-link{
+  font-size: 40px;
+  color: #FFF !important;
 }
 
 .nav-link.active {
